satan nervt wieder mal

--- a/teamSheeple/youngerChiefPonieRescueMission/index.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/index.html
@@ -52,15 +52,14 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <h2>Modal Example</h2>
 
 <!-- Trigger/Open The Modal -->
-<span id="modal1">Open Modal</span>
+<span id="openModal1">Open Modal</span>
 
-DPIJ: trigger, ... <- offensive words
 
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<div id="myModal1" class="modal">
 
   <!-- Modal content -->
-  <div class="modal-content">
+  <div class="modal1-content">
     <span class="close">&times;</span>
     <p>Some text in the Modal..</p>
   </div>
