--- a/teamSheeple/youngerChiefPonieRescueMission/index.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/index.html
@@ -1,101 +1,46 @@
 
 
-<!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
+  <head>
+    <title>TEST</title>
+  </head>
+  <body>
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
+	  test<br>
 
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-</style>
-</head>
-<body>
-
-<h2>Modal Example</h2>
-
-<!-- Trigger/Open The Modal -->
-<span id="openModal1">Open Modal</span>
+<a href="./hackerEthics.html"
+  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
+  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  TESTESTESTEEST
+</a>
+	tset
+	<iframe src="./hackerEthics.html" id="place-holder-1" style="background-color:red; width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+	
 
 
-<!-- The Modal -->
-<div id="myModal1" class="modal">
+asdf
+asdf
+asdf
+asdf
+asdf
+asdf
+asdf
+asdf
+<br>
+asdf
+<br>
+asdf
+<br>
+asdf
+<br>
+asdf
+<br>
+asdf
+<br>
+asdf
+<br>
 
-  <!-- Modal content -->
-  <div class="modal1-content">
-    <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
-  </div>
 
-</div>
 
-<script>
-// Get the modal
-var modal = document.getElementById("myModal");
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
-
-</body>
+  </body>
 </html>
-
-
-
