satan nervt immer noch ist aber grad wieder mal am abloosen

--- a/teamSheeple/youngerChiefPonieRescueMission/hackerEthics.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/hackerEthics.html
@@ -1,6 +1,11 @@
-
-
-
-tste test 
-test 
+<html>
+  <head>
+    <title>
+      HackerEthics::Landev-Mod
+    </title>
+  </head>
+  <body style="background-color: #99f;">
+    TEST
+  </body>
+</head>
 
