--- a/teamSheeple/youngerChiefPonieRescueMission/index.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/index.html
@@ -1,20 +1,17 @@
-
-
-<html>
+<!DOCTYPE html5>
+<html lang="en"> 
   <head>
+    <meta charset="utf-8"/>
     <title>TEST</title>
   </head>
   <body>
 
-	  test<br>
-
+  <h1>Halli Hallo lieber $JüngererChef</h1>
 <a href="./hackerEthics.html"
   onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
   onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
   TESTESTESTEEST
-</a>
-	tset
-	<iframe src="./hackerEthics.html" id="place-holder-1" style="background-color:red; width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
 	
 
 
