--- a/teamSheeple/youngerChiefPonieRescueMission/index.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/index.html
@@ -3,11 +3,106 @@
   <head>
     <meta charset="utf-8"/>
     <title>TEST</title>
+<style>
+html { background-color: #111;
+       color: #4f4;
+       font-family: "Lucida Console", Monaco, monospace;
+}
+
+
+
+p { clear: both; }
+
+div.cards {
+  text-align: justify;
+  padding: 2em;
+} 
+div.text {
+  text-align: justify;
+  padding: 2em;
+}
+a {
+color: orange;
+}
+
+font.monospace
+{
+  font-family: "Lucida Console", Monaco, monospace;
+}
+
+.blink {
+    animation-duration: 1s;
+    animation-name: blink;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+@keyframes blink {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+</style>
+
   </head>
   <body>
+  <br>
+  <h2><a href="http://hackerscardgame.ch">HackersCardgame.ch</a> begrüsst <font color=#77f>$JüngerenChef</font> um nicht <font color=tomato>geplanter Sündenbock</font> sagen zu müssen</h2>
+  Namensnennung lassen wir mal weg, erstens wegen Persönlichkeitsrechten, zweitens kann man das Dokument mit <font color=#77f>$Variabeln</font> dann als Vorlage brauchen
 
-  <h1>Halli Hallo lieber $JüngererChef</h1>
-<a href="./hackerEthics.html"
+  <br> 
+  <br> 
+ Das HackersCardgame hat zur Zeit etwa 350 Karten, die wichtigsten Karten für den Moment wären 
+  
+   
+  <a href="./hackerEthics.html"
+  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
+  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  t40
+</a> <iframe src="./cards/t40.jpg" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+  ,      
+  
+  <a href="./hackerEthics.html"
+  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
+  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  t41
+</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+  ,   
+  
+  <a href="./hackerEthics.html"
+  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
+  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  t42
+</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+  ,      
+  
+  <a href="./hackerEthics.html"
+  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
+  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  t43
+</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+  ,      
+  
+  <a href="./hackerEthics.html"
+  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
+  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  t44
+</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+  ,      
+ 
+  <a href="./hackerEthics.html"
+  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
+  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  t45
+</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+  ,      
+  
+  
+  <a href="./hackerEthics.html"
   onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
   onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
   TESTESTESTEEST
