satan nervt wieder mal

--- a/teamSheeple/youngerChiefPonieRescueMission/index.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/index.html
@@ -57,27 +57,29 @@ font.monospace
   <br> 
   <br> 
  Das HackersCardgame hat zur Zeit etwa 350 Karten, die wichtigsten Karten für den Moment wären 
-  
+ 
+ <!-- zIndex Suicide Death Bot: alternates z-index, zindex, zIndex, not clear if qFire, Etterfilter or endpoint, maybe injected as soon as one uses / types zindex to whitehats, whsitelbower, whitnesses.... -->
+
    
   <a href="./hackerEthics.html"
-  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
+  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=550; document.getElementById('place-holder-1').zIndex=100"
   onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
   t40
-</a> <iframe src="./cards/t40.jpg" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+</a> <img src="./cards/t40.jpg" id="place-holder-1" style="width: 10; height: 10; zIndex: 0; position: absolute;" /> </iframe>
   ,      
   
   <a href="./hackerEthics.html"
   onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
   onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
   t41
-</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+</a> <img src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zIndex: 0; position: absolute;" /> </iframe>
   ,   
   
   <a href="./hackerEthics.html"
   onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
   onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
   t42
-</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; z-index: 0; position: absolute;" /> </iframe>
   ,      
   
   <a href="./hackerEthics.html"
