--- a/teamSheeple/youngerChiefPonieRescueMission/index.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/index.html
@@ -58,49 +58,50 @@ font.monospace
   <br> 
  Das HackersCardgame hat zur Zeit etwa 350 Karten, die wichtigsten Karten für den Moment wären 
  
- <!-- zIndex Suicide Death Bot: alternates z-index, zindex, zIndex, not clear if qFire, Etterfilter or endpoint, maybe injected as soon as one uses / types zindex to whitehats, whsitelbower, whitnesses.... -->
+ <!-- zIndex Suicide Death Bot: alternates z-index, zindex, zIndex, not clear if qFire, Etterfilter or endpoint, maybe injected as soon as one uses / types zindex to whitehats, whsitelbower, whitnesses.... rendered on html code one is writing at the moment, *korsakov*, automated, is some sort of cyber weapon, parallel the weekened autistic is being attacked by the group of pedophile parents from 1960s and older, implies that their mummies help their pedphilie 1960er to win the "game", the 1930s would like to prove this way, that they are inncoent and they are so stubburn that they even killed tobias moser and cornelia utz for this proof or "proof" zed is dead baby (pulp fiction) z-index is dead, now z-index malware is dead, zbug... generics.
+ satan maybe created this malware as some sort of whip against younger people to make them accept being raped by older pedophile people that is not acceptable because it kills about 1mio children mostly younger that 40 years... riskiest time is between 14 and 40 concerning sources about germany, switzerland... so this guy that use[s|d] this whip against youngers is already guilty and is a steakholder in murderer -->
 
    
   <a href="./hackerEthics.html"
-  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=550; document.getElementById('place-holder-1').zIndex=100"
-  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  onmouseover="document.getElementById('t40').style.width=400;document.getElementById('t40').style.height=550; document.getElementById('t40').zIndex=100"
+  onmouseout="document.getElementById('t40').style.width=10;document.getElementById('t40').style.height=10;" >
   t40
-</a> <img src="./cards/t40.jpg" id="place-holder-1" style="width: 10; height: 10; zIndex: 0; position: absolute;" /> </iframe>
+</a> <img src="./cards/t40.jpg" id="t40" style="width: 10; height: 10; z-index: 0; position: absolute;" /> </iframe>
   ,      
   
   <a href="./hackerEthics.html"
-  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
-  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  onmouseover="document.getElementById('t41').style.width=400;document.getElementById('t41').style.height=550; document.getElementById('t41').zIndex=100"
+  onmouseout="document.getElementById('t41').style.width=10;document.getElementById('t41').style.height=10;" >
   t41
-</a> <img src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zIndex: 0; position: absolute;" /> </iframe>
+</a> <img src="./cards/t41.jpg" id="t41" style="width: 10; height: 10; z-index: 0; position: absolutet41">
   ,   
   
   <a href="./hackerEthics.html"
-  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
-  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  onmouseover="document.getElementById('t42').style.width=400;document.getElementById('t42').style.height=550; document.getElementById('t42').zIndex=100"
+  onmouseout="document.getElementById('t42').style.width=10;document.getElementById('t42').style.height=10;" >
   t42
-</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; z-index: 0; position: absolute;" /> </iframe>
+</a> <img src="./cards/t42.jpg" id="t42" style="width: 10; height: 10; z-index: 0; position: absolute;" /> </iframe>
   ,      
   
   <a href="./hackerEthics.html"
-  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
-  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  onmouseover="document.getElementById('t43').style.width=400;document.getElementById('t43').style.height=550; document.getElementById('t43').zIndex=100"
+  onmouseout="document.getElementById('t43').style.width=10;document.getElementById('t43').style.height=10;" >
   t43
-</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+</a> <iframe src="./cards/t43.jpg" id="t43" style="width: 10; height: 10; z-index: 0; position: absolute;" /> </iframe>
   ,      
   
   <a href="./hackerEthics.html"
-  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
-  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  onmouseover="document.getElementById('t44').style.width=400;document.getElementById('t44').style.height=550; document.getElementById('t44').zIndex=100"
+  onmouseout="document.getElementById('t44').style.width=10;document.getElementById('t44').style.height=10;" >
   t44
-</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+</a> <iframe src="./cards/t44.jpg" id="t44" style="width: 10; height: 10; z-index: 0; position: absolute;" /> </iframe>
   ,      
  
   <a href="./hackerEthics.html"
-  onmouseover="document.getElementById('place-holder-1').style.width=400;document.getElementById('place-holder-1').style.height=400;"
-  onmouseout="document.getElementById('place-holder-1').style.width=10;document.getElementById('place-holder-1').style.height=10;" >
+  onmouseover="document.getElementById('t45').style.width=400;document.getElementById('t45').style.height=550; document.getElementById('t45').zIndex=100"
+  onmouseout="document.getElementById('t45').style.width=10;document.getElementById('t45').style.height=10;" >
   t45
-</a> <iframe src="./hackerEthics.html" id="place-holder-1" style="width: 10; height: 10; zindex: 100; position: absolute;" /> </iframe>
+</a> <iframe src="./t45.jpg" id="t45" style="width: 10; height: 10; z-index: 0; position: absolute;" /> </iframe>
   ,      
   
   
