satan und astrid nervt wieder mal

--- a/teamSheeple/youngerChiefPonieRescueMission/index.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/index.html
@@ -102,13 +102,52 @@ font.monospace
   onmouseover="document.getElementById('t45').style.width=400; document.getElementById('t45').style.height=550; document.getElementById('t45').style.zIndex=100"
   onmouseout="document.getElementById('t45').style.width='0.8em'; document.getElementById('t45').style.height='1em'; document.getElementById('t45').style.zIndex=0" >
   t45 <img src="./cards/t45.jpg" id="t45" style="width: 0.8em; height: 1em; z-index: 0; position: absolute;" /> </iframe>&nbsp;</a>
-  PFISTERER will das für sich claimen, dann die 1980er herde übernehmen und versklaven.... deshab spuckt der pfisterer immer seine sprachsamples rein, prägen auf
-  die beste lösugn und da pfisterer nicht die beste lösung hat nimmt er einfach von den jüngeren studenten das beste und verkauft es als sein werk und 
-  hängt dem jüngeren noch an, dass er das werk gestolen habe...
+  ,
+  
+  <a href="http://hackerscardgame.ch/jpg/EN/#m98" target=_blank
+  onmouseover="document.getElementById('m98').style.width=400; document.getElementById('m98').style.height=550; document.getElementById('m98').style.zIndex=100"
+  onmouseout="document.getElementById('m98').style.width='0.8em'; document.getElementById('m98').style.height='1em'; document.getElementById('m98').style.zIndex=0" >
+  t45 <img src="./cards/t45.jpg" id="t45" style="width: 0.8em; height: 1em; z-index: 0; position: absolute;" /> </iframe>&nbsp;</a>
+  ,
+  
+  <a href="http://hackerscardgame.ch/jpg/EN/#m" target=_blank   hier will sich jetzt die gesiteskranke astrid blum rein spucken *verkrampfung mener muskulatur* <- allenfalls prägung oder etwas esotherisches wo sie dann für jeden klick irgend incentives bekäme?
+  onmouseover="document.getElementById('t45').style.width=400; document.getElementById('t45').style.height=550; document.getElementById('t45').style.zIndex=100"
+  onmouseout="document.getElementById('t45').style.width='0.8em'; document.getElementById('t45').style.height='1em'; document.getElementById('t45').style.zIndex=0" >
+  t45 <img src="./cards/t45.jpg" id="t45" style="width: 0.8em; height: 1em; z-index: 0; position: absolute;" /> </iframe>&nbsp;</a>
+  ,
+  
+  <br>
 
 
 
 
+
+
+
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+
+
+
+
+
+
+
+
+
+youtube playlist's
+
+Demoscene:
+https://www.youtube.com/watch?v=0FGVBE2M8ts&list=PLWsX0-AjlNWx0OSnVHjA61sKGRcaPpSIa
+(das sieht so aus wie wenn es einfach Geblinke ist mit Musik, aber eigentlich ist es Digitale Kunst, und wie die meiste Kunst lebt diese von einer bestimmten Symbolik)
 
 
   </body>
