--- a/teamSheeple/youngerChiefPonieRescueMission/index.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/index.html
@@ -107,20 +107,21 @@ font.monospace
   <a href="http://hackerscardgame.ch/jpg/EN/#m98" target=_blank
   onmouseover="document.getElementById('m98').style.width=400; document.getElementById('m98').style.height=550; document.getElementById('m98').style.zIndex=100"
   onmouseout="document.getElementById('m98').style.width='0.8em'; document.getElementById('m98').style.height='1em'; document.getElementById('m98').style.zIndex=0" >
-  t45 <img src="./cards/t45.jpg" id="t45" style="width: 0.8em; height: 1em; z-index: 0; position: absolute;" /> </iframe>&nbsp;</a>
+  m98 <img src="./cards/m98.jpg" id="t45" style="width: 0.8em; height: 1em; z-index: 0; position: absolute;" /> </iframe>&nbsp;</a>
   ,
   
-  <a href="http://hackerscardgame.ch/jpg/EN/#m" target=_blank   hier will sich jetzt die gesiteskranke astrid blum rein spucken *verkrampfung mener muskulatur* <- allenfalls prägung oder etwas esotherisches wo sie dann für jeden klick irgend incentives bekäme?
-  onmouseover="document.getElementById('t45').style.width=400; document.getElementById('t45').style.height=550; document.getElementById('t45').style.zIndex=100"
-  onmouseout="document.getElementById('t45').style.width='0.8em'; document.getElementById('t45').style.height='1em'; document.getElementById('t45').style.zIndex=0" >
-  t45 <img src="./cards/t45.jpg" id="t45" style="width: 0.8em; height: 1em; z-index: 0; position: absolute;" /> </iframe>&nbsp;</a>
+  <a href="http://hackerscardgame.ch/jpg/EN/#m99" target=_blank
+  onmouseover="document.getElementById('m99').style.width=400; document.getElementById('m99').style.height=550; document.getElementById('m99').style.zIndex=100"
+  onmouseout="document.getElementById('m99').style.width='0.8em'; document.getElementById('m99').style.height='1em'; document.getElementById('m99').style.zIndex=0" >
+  m99 <img src="./cards/m99.jpg" id="m99" style="width: 0.8em; height: 1em; z-index: 0; position: absolute;" /> </iframe>&nbsp;</a>
   ,
   
   <br>
 
 
 
-
+das team satans, dass meinen computer ownen soll so, dass man mir ein "blaming the user" unterschieben kann, schient permanent in "bereitschaft" zu sein
+und zu probieren und zu probieren und zu probieren....
 
 
 
