zensur pattern: 1. körperverletzung über spinalis, 2. deep packet injection eines namens aus der täterschaft, 3. sperrung des contents wegen persönlichketisrechten

--- a/teamSheeple/youngerChiefPonieRescueMission/index.html
+++ b/teamSheeple/youngerChiefPonieRescueMission/index.html
@@ -107,7 +107,7 @@ font.monospace
   <a href="http://hackerscardgame.ch/jpg/EN/#m98" target=_blank
   onmouseover="document.getElementById('m98').style.width=400; document.getElementById('m98').style.height=550; document.getElementById('m98').style.zIndex=100"
   onmouseout="document.getElementById('m98').style.width='0.8em'; document.getElementById('m98').style.height='1em'; document.getElementById('m98').style.zIndex=0" >
-  m98 <img src="./cards/m98.jpg" id="t45" style="width: 0.8em; height: 1em; z-index: 0; position: absolute;" /> </iframe>&nbsp;</a>
+  m98 <img src="./cards/m98.jpg" id="m98" style="width: 0.8em; height: 1em; z-index: 0; position: absolute;" /> </iframe>&nbsp;</a>
   ,
   
   <a href="http://hackerscardgame.ch/jpg/EN/#m99" target=_blank
@@ -118,10 +118,6 @@ font.monospace
   
   <br>
 
-
-
-das team satans, dass meinen computer ownen soll so, dass man mir ein "blaming the user" unterschieben kann, schient permanent in "bereitschaft" zu sein
-und zu probieren und zu probieren und zu probieren....
 
 
 
